data/derived/comb/progs/unify/prog0427.ml.out
Characters 93-109:
  let result = bigAdd s ((mulByDigit i l)*m) in
                         ^^^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int
